--- a/bookmarker-api/build.gradle
+++ b/bookmarker-api/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.kuroshan'
-version = '0.0.1-SNAPSHOT'
+version = '3.0'
 
 java {
 	sourceCompatibility = '17'
@@ -55,7 +55,7 @@ jib {
 	}
 	to {
 		image = 'bookmarker-api'
-		tags = ['latest', '3.0']
+		tags = ['latest', version]
 	}
 	container {
 		ports = ['8080']
