--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Get version
+      id: get_version
+      run: echo "::set-output name=VERSION::$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )"
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -33,3 +37,11 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew clean build jibDockerBuild --no-daemon
+
+    # - name: Push to Docker Hub
+    #   uses: docker/build-push-action@v2
+    #   with:
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    #     repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
+    #     tags: 2.0.0, latest
