--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Get version
       id: get_version
-      run: echo "::set-output name=VERSION::$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )"
+      run: echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )"
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
