--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,8 +23,10 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Get version
-      id: get_version
-      run: echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )"
+      id: get-ms-version
+      run: |
+        ms_version = $(echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )")
+        echo version=$ms_version >> $GITHUB_OUTPUT
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -36,12 +38,13 @@ jobs:
       uses: gradle/actions/setup-gradle@v0
 
     - name: Build with Gradle
-      run: ./gradlew clean build jibDockerBuild --no-daemon
+      # run: ./gradlew clean bootJar jibDockerBuild --no-daemon
+      run: ./gradlew clean bootJar --no-daemon
 
-    # - name: Push to Docker Hub
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
-    #     repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
-    #     tags: 2.0.0, latest
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
+        tags: @${{ steps.get-ms-version.outputs.version }}, latest
