--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,8 @@ jobs:
       id: get-ms-version
       run: |
         ms_version = $(echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )")
-        echo version=$ms_version >> $GITHUB_OUTPUT
+        echo $ms_version
+        # echo version=$ms_version >> $GITHUB_OUTPUT
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
