--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,8 +26,7 @@ jobs:
       id: get-ms-version
       run: |
         ms_version=$(echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )")
-        echo $ms_version
-        # echo version=$ms_version >> $GITHUB_OUTPUT
+        echo version=$ms_version >> $GITHUB_OUTPUT
 
     - name: Set up JDK 17
       uses: actions/setup-java@v3
@@ -42,10 +41,10 @@ jobs:
       # run: ./gradlew clean bootJar jibDockerBuild --no-daemon
       run: ./gradlew clean bootJar --no-daemon
 
-    # - name: Push to Docker Hub
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
-    #     repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
-    #     tags: @${{ steps.get-ms-version.outputs.version }}, latest
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
+        tags: @${{ steps.get-ms-version.outputs.version }}, latest
