--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,10 +41,10 @@ jobs:
       # run: ./gradlew clean bootJar jibDockerBuild --no-daemon
       run: ./gradlew clean bootJar --no-daemon
 
-    # - name: Push to Docker Hub
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
-    #     repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
-    #     tags: @${{ steps.get-ms-version.outputs.version }}, latest
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
+        tags: @${{ steps.get-ms-version.outputs.version }}, latest
