--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,6 +44,7 @@ jobs:
     - name: Push to Docker Hub
       uses: docker/build-push-action@v2
       with:
+        context: ./bookmarker-api
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
