--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,8 +42,9 @@ jobs:
       run: ./gradlew clean bootJar --no-daemon
 
     - name: Push to Docker Hub
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5
       with:
+        push: true
         context: ./bookmarker-api
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
