--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "**" ]
+    branches:
+      - master
+  workflow_dispatch:
 
 jobs:
   build:
