--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Compile and Push to Docker Hub
 
 on:
   push:
@@ -15,7 +15,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -30,7 +29,7 @@ jobs:
         ms_version=$(echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )")
         echo version=$ms_version >> $GITHUB_OUTPUT
 
-    - name: Set up JDK 17
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -43,12 +42,31 @@ jobs:
       # run: ./gradlew clean bootJar jibDockerBuild --no-daemon
       run: ./gradlew clean bootJar --no-daemon
 
-    - name: Push to Docker Hub
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        context: ./bookmarker-api
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ secrets.DOCKER_USERNAME }}/bookmarker-api
-        tags: 3.0.1, latest
+  push:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./bookmarker-api
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:4.0
