--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Compile and Push to Docker Hub
 
 on:
@@ -39,10 +32,10 @@ jobs:
       uses: gradle/actions/setup-gradle@v0
 
     - name: Build with Gradle
-      # run: ./gradlew clean bootJar jibDockerBuild --no-daemon
       run: ./gradlew clean bootJar --no-daemon
 
   push:
+    needs: build
     runs-on: ubuntu-latest
     defaults:
       run:
