--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,10 @@ jobs:
         working-directory: ./bookmarker-api
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Get version
-      id: get-ms-version
-      run: |
-        ms_version=$(echo "$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )")
-        echo version=$ms_version >> $GITHUB_OUTPUT
+    - uses: actions/checkout@v2
 
     - name: Set up JDK
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -32,7 +26,7 @@ jobs:
       uses: gradle/actions/setup-gradle@v0
 
     - name: Build with Gradle
-      run: ./gradlew clean bootJar --no-daemon
+      run: ./gradlew clean build --no-daemon
 
   push:
     needs: build
@@ -40,26 +34,22 @@ jobs:
     defaults:
       run:
         working-directory: ./bookmarker-api
+
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:4.0
+    - uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:latest
