--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,30 +26,36 @@ jobs:
       uses: gradle/actions/setup-gradle@v0
 
     - name: Build with Gradle
-      run: ./gradlew clean build --no-daemon
+      run: ./gradlew clean bootJar --no-daemon
 
-  push:
-    needs: build
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./bookmarker-api
+    - name: Get version
+      id: get-version
+      run: |
+          echo "VERSION=$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )" >> $GITHUB_ENV
+          echo ${{ secrets.DOCKERHUB_USERNAME }}
 
-    steps:
-    - uses: actions/checkout@v2
+  # push:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ./bookmarker-api
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+  #   steps:
+  #   - uses: actions/checkout@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v1
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:latest
+  #   - name: Login to Docker Hub
+  #     uses: docker/login-action@v1
+  #     with:
+  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #   - name: Build and push Docker image
+  #     uses: docker/build-push-action@v2
+  #     with:
+  #       context: .
+  #       push: true
+  #       tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:${{ env.VERSION }}
