--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,11 @@ jobs:
       id: get-version
       run: |
           echo "VERSION=$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )" >> $GITHUB_ENV
-          echo ${{ secrets.DOCKERHUB_USERNAME }}
+          if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" ]]; then
+            echo "Secret is not defined"
+          else
+            echo "Secret is defined"
+          fi
 
   # push:
   #   needs: build
