--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,34 +32,28 @@ jobs:
       id: get-version
       run: |
           echo "VERSION=$(grep "version = " build.gradle | awk '{print $3}' | tr -d \'\" )" >> $GITHUB_ENV
-          if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" ]]; then
-            echo "Secret is not defined"
-          else
-            echo "Secret is defined"
-          fi
+  push:
+    needs: build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./bookmarker-api
 
-  # push:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./bookmarker-api
+    steps:
+    - uses: actions/checkout@v2
 
-  #   steps:
-  #   - uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-  #   - name: Set up Docker Buildx
-  #     uses: docker/setup-buildx-action@v1
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #   - name: Login to Docker Hub
-  #     uses: docker/login-action@v1
-  #     with:
-  #       username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #       password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-  #   - name: Build and push Docker image
-  #     uses: docker/build-push-action@v2
-  #     with:
-  #       context: .
-  #       push: true
-  #       tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:${{ env.VERSION }}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:${{ env.VERSION }}
