--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: kuroshan/bookmarker-api:${{ env.VERSION }}
+        tags: kuroshan/bookmarker-api:5.0
