--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
   push:
     needs: build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./bookmarker-api
 
     steps:
     - uses: actions/checkout@v2
@@ -51,6 +54,5 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./bookmarker-api
         push: true
         tags: 5.0
