--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
       name: Publish Docker Image
       run: |
         docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:${{ steps.get-version.outputs.VERSION }}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/bookmarker-api:3.0
