--- a/bookmarker-api/Dockerfile.layered
+++ b/bookmarker-api/Dockerfile.layered
@@ -1,13 +1,14 @@
-FROM eclipse-temurin:17-jre-focal as builder
+FROM eclipse-temurin:17-jre as builder
 WORKDIR application
-ARG JAR_FILE=build/libs/*-SNAPSHOT.jar
+ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
-FROM eclipse-temurin:17-jre-focal
+# the second stage of our build will copy the extracted layers
+FROM eclipse-temurin:17-jre
 WORKDIR application
 COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
 COPY --from=builder application/snapshot-dependencies/ ./
 COPY --from=builder application/application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "org.springframework.boot.loader.launch.JarLauncher"]
