--- a/bookmarker-api/build.gradle
+++ b/bookmarker-api/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.1'
-	id 'io.spring.dependency-management' version '1.1.4'
+  id 'org.springframework.boot' version '3.2.2'
+  id 'io.spring.dependency-management' version '1.1.4'
 	id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
@@ -47,6 +47,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.named("bootJar") {
+	layered {
+		enabled = true
+	}
 }
 
 jib {
