--- a/bookmarker-api/src/main/resources/application.yml
+++ b/bookmarker-api/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
       hibernate:
         format_sql: true
     
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
