--- a/bookmarker-api/src/main/resources/application.yml
+++ b/bookmarker-api/src/main/resources/application.yml
@@ -6,9 +6,24 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    
+
+---
+spring:
+  config:
+    activate:
+      on-profile: k8s
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+
 management:
   endpoints:
     web:
       exposure:
         include: "health,info,metrics,prometheus"
+  endpoint:
+    health:
+      show-details: always
