--- a/k8s/3-bookmarker-api.yaml
+++ b/k8s/3-bookmarker-api.yaml
@@ -26,6 +26,10 @@ spec:
     metadata:
       labels:
         app: bookmarker-api-pod
+      annotations:
+        prometheus.io/path: /actuator/prometheus
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
     spec:
       containers:
         - name: bookmarker
